--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #eae8e8;
     --foreground: #ededed;
   }
 }
@@ -18,4 +18,25 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.rounded-edge {
+  height: 24%;
+  aspect-ratio: 3/2;
+  clip-path: ellipse(85% 100% at 50% 0);
+  background: #064c4f;
+}
+
+.rounded-edge-product {
+  background: #ffffff;
+  aspect-ratio: 2/4;
+  height: 70%;
+  clip-path: ellipse(100% 70% at 50% 0%);
+}
+
+@media (min-width: 768px) {
+  .rounded-edge-product {
+    height: 40%;
+    aspect-ratio: 3/4;
+  }
 }
